# testNinja

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  person.cpp  person.hpp
translation/: CMakeLists.txt
